# no-brainer

./: CMakeLists.txt  setup-desktop.sh  setup-pi.sh
cmake/: executable.cmake
include/components/: gpio.hpp
sandbox/: CMakeLists.txt  gpio.cpp
